Changes for 1.8.16rc1

A......... [ZBX-5822] fixed macro in trigger names for unixtime and other types of units (Oleg)
.......PS. [ZBX-5697] fixed processing of external check parameters with the right square bracket (Sasha)
........S. [ZBX-5454] fixed encoding of long email subject line as required by RFC-2047; thanks to Jairo Eduardo Lopez Fuentes Nacarino (Andris)
.D........ [ZBX-5650] added more information about ProxyLocalBuffer parameter in the example configuration file (Richlv)
A......... [ZBX-4097] changed the "application", "host" and "group" parameters for item.get and trigger.get to be case sensitive (Pavels)
..F....... [ZBX-5514] fixed SQL query in get_min_itemclock_by_itemid function (Eduard)
A......... [ZBX-5505] fixed incorrect SQL query building using limits (Eduard)
A......... [ZBX-5512] fixed undefined index in screens (Eduard)
...G...PS. [ZBX-5383] maximum data size accepted via Zabbix communication protocol is limited to 128 MB (Andris)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A......... [ZBX-5395] fixed {ITEM.LASTVALUE1} and {ITEM.VALUE1} expanding in the trigger.get method (Pavels)

Changes for 1.8.15

1.8.15rc1 was released as 1.8.15 without any changes

Changes for 1.8.15rc1

........S. [ZBX-4527] removed limitation of alerter script command line (Sasha)
........S. [ZBX-5367] fixed assignment of elements to a maintenance mode by a timer process (Sasha)
..F....... [ZBX-5348] fixed validation of itemid parameter for popup_bitem.php (Vedmak)
....I..... [ZBX-5357] fixed typos in help_items item key descriptions (Richlv)
..F....... [ZBX-5319] fixed incorrect calculation of action escalation steps delay (Vedmak)
A......... [ZBX-5264] fixed 'undefined variable: nodeids [api/classes/class.cscreen.php:286]' (Toms)
..F....... [ZBX-5316] fixed incorrect screen items can be deleted when deleting hosts (Vedmak)